# synthcity

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CONTRIBUTING.MD  INSTRUCTION.txt  LICENSE  README.md  code_collector.py  code_collector2.py  install.sh  keepalive.txt  prereq.txt  prompt.txt  prompt2.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_doc_imports.py
.github/workflows/: release.yml  test.yml  test_all_tutorials.yml  test_full.yml  test_full_part2.yml  test_pr.yml  test_tutorials.yml
.github/workflows/scripts/: release_linux.sh  release_osx.sh  release_windows.bat
UIAYN_experiments/: batch_job.slurm  benchmark.py  datasets.json  format.py  tune.py  utils.py
docs/: README.md  advanced.rst  conf.py  dataloaders.rst  examples.rst  generators.rst  index.rst  metrics.rst  prereqs.txt  requirements.txt  tutorials
docs/_templates/: module.rst_t
scripts/: nb_test.py
src/: auto-anno.py  temp.py  test.py  tmp.py
src/synthcity/: __init__.py  logger.py  skeleton.py  version.py
src/synthcity/benchmark/: __init__.py  utils.py
src/synthcity/metrics/: __init__.py  _utils.py  anonymity.py  attacks.py  basic.py  detection.py  eval.py  eval_attacks.py  eval_detection.py  eval_performance.py  eval_privacy.py  eval_sanity.py  eval_statistical.py  helpers.py  performance.py  plots.py  privacy.py  sanity.py  scores.py  statistical.py  weighted_metrics.py
src/synthcity/plugins/: __init__.py  _survival_pipeline.py  _survival_uncensoring_pipeline.py  plugin_adsgan.py  plugin_bayesian_network.py  plugin_copulagan.py  plugin_ctgan.py  plugin_dummy_sampler.py  plugin_gaussian_copula.py  plugin_marginal_distributions.py  plugin_nflow.py  plugin_pategan.py  plugin_privbayes.py  plugin_random_noise.py  plugin_rtvae.py  plugin_survae.py  plugin_survival_adsgan.py  plugin_survival_bayesian_network.py  plugin_survival_ctgan.py  plugin_survival_gan.py  plugin_survival_nflow.py  plugin_survival_privbayes.py  plugin_survival_rtvae.py  plugin_survival_tvae.py  plugin_tvae.py  plugin_uniform_sampler.py
src/synthcity/utils/: anonymization.py  callbacks.py  compression.py  constants.py  dataframe.py  dp.py  evaluation.py  optimizer.py  optuna_sample.py  redis_wrapper.py  reproducibility.py  samplers.py  scores.py  serialization.py  statistics.py
tests/: conftest.py  nb_eval.py  test_logger.py  test_skeleton.py
tests/benchmarks/: test_benchmarks.py
tests/metrics/: test_anonymity.py  test_api.py  test_attacks.py  test_basic.py  test_detection.py  test_performance.py  test_plots.py  test_privacy.py  test_sanity.py  test_statistical.py
tests/plugins/: helpers.py  test_adsgan.py  test_base.py  test_bayesian_network.py  test_copulagan.py  test_ctgan.py  test_dummy_sampler.py  test_gaussian_copula.py  test_marginal_distributions.py  test_nflow.py  test_pategan.py  test_plugin_add.py  test_plugin_serialization.py  test_privbayes.py  test_rtvae.py  test_survae.py  test_survival_adsgan.py  test_survival_bayesian_network.py  test_survival_ctgan.py  test_survival_gan.py  test_survival_nflow.py  test_survival_privbayes.py  test_survival_rtvae.py  test_survival_tvae.py  test_tvae.py  test_uniform_sampler.py
tests/plugins/core/: test_constraints.py  test_dataloader.py  test_distribution.py  test_params.py  test_plugin.py  test_schema.py
tests/plugins/domain_adaptation/: da_helpers.py  test_radialgan.py
tests/plugins/fairness/: test_decaf.py
tests/plugins/generic/: generic_helpers.py  helpers.py  test_adsgan.py  test_aim.py  test_arf.py  test_bayesian_network.py  test_copulagan.py  test_ctgan.py  test_ddpm.py  test_dpgan.py  test_dummy_sampler.py  test_gaussian_copula.py  test_goggle.py  test_great.py  test_marginal_distributions.py  test_nflow.py  test_pategan.py  test_privbayes.py  test_rtvae.py  test_sdv_ctgan.py  test_sdv_tvae.py  test_syn_seq.py  test_tvae.py  test_uniform_sampler.py
tests/plugins/images/: img_helpers.py  test_image_adsgan.py  test_image_cgan.py  test_image_gan.py
tests/plugins/models/: test_gan.py  test_mlp.py  test_normalizing_flows.py  test_vae.py  (+3 more)
tests/utils/: test_anonymization.py  test_compression.py  test_dp.py  test_serialization.py
tutorials/: basic_example.ipynb  tutorial0_basic_examples.ipynb  tutorial10_sequential_synthesis.ipynb  tutorial10_test.ipynb  tutorial1_add_a_new_plugin.ipynb  tutorial2_benchmarks.ipynb  tutorial2_survival_analysis.ipynb  tutorial3_survival_analysis.ipynb  tutorial4_time_series.ipynb  tutorial5_differential_privacy.ipynb  tutorial6_own_data.ipynb  tutorial6_time_series_data_preparation.ipynb  tutorial7_image_generation_using_mednist.ipynb  tutorial8_hyperparameter_optimization.ipynb  tutorial8_tabular_modelling_with_diffusion.ipynb  tutorial9_dealing_with_missing_data.ipynb  tutorial_07_image_generation_using_mednist.ipynb
tutorials/plugins/: plugin_adsgan.ipynb  plugin_bayesian_network.ipynb  plugin_copulagan.ipynb  plugin_ctgan.ipynb  plugin_dummy_sampler.ipynb  plugin_gaussian_copula.ipynb  plugin_marginal_distributions.ipynb  plugin_nflow.ipynb  plugin_pategan.ipynb  plugin_privbayes.ipynb  plugin_tvae.ipynb  plugin_uniform_sampler.ipynb
tutorials/survival_analysis/: benchmark_synthetic_survival_data.ipynb  datasets.py  experiments_00_benchmark_synthetic_survival_data.ipynb  experiments_00_km_plots_tte_models.ipynb  experiments_01_benchmark_synthetic_survival_data.ipynb  experiments_01_gain_of_function_imbalanced_sampler.ipynb  experiments_01_sources_of_gain_nonparametric.ipynb  experiments_02_sources_of_gain_parametric.ipynb  experiments_03_covariates_visualisations.ipynb  kaplan_meier_plots.ipynb  plot_benchmark_synthetic_survival_data.ipynb  plots.py  plots_00_data_fidelity.ipynb  plots_01_data_optimism.ipynb  plots_02_benchmark_synthetic_survival_data.ipynb  plots_03_benchmark_gain_of_function.ipynb  plots_data_fidelity.ipynb  plots_data_optimism.ipynb
tutorials/testing_ideas/: benchmark_synthetic_survival_data.ipynb  generative_models_for_survival_data.ipynb  kaplan_meier_plots.ipynb  simulate_censoring_times.ipynb  simulate_time_to_event.ipynb
(+373 files in other folders)
