# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = synthcity
description = Synthetic data generator and evaluator!
license = Apache-2.0 license
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
# Add here related links, for example:
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.9

install_requires =
    importlib-metadata
    pandas>=2.1 # min due to lifelines
    torch>=2.1, <2.3 # Max due to tsai
    scikit-learn>=1.2
    nflows>=0.14
    numpy>=1.20, <2.0
    lifelines>=0.29.0, <0.30.0 # max due to xgbse
    opacus>=1.3
    networkx>2.0,<3.0
    decaf-synthetic-data>=0.1.6
    optuna>=3.1
    shap
    tenacity
    tqdm
    loguru
    pydantic>=2.0
    cloudpickle
    scipy
    xgboost<3.0.0
    geomloss
    pgmpy
    redis
    pycox
    xgbse>=0.3.1
    pykeops
    fflows
    monai
    tsai; python_version>"3.7"
    be-great>=0.0.5;python_version>="3.9"
    arfpy


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov
    jupyter
    notebook
    bandit
    black
    black-nb
    darglint
    docutils<0.18
    doc8
    flake8
    isort
    nbconvert
    nbformat
    pytest-benchmark
    pytest-xdist[psutil]
    pytest-xprocess
    igraph
    py # pytest 7.2.0 bug https://github.com/pytest-dev/pytest-xprocess/issues/110
    pre-commit
    tabulate
    click

goggle =
    dgl
    torch_geometric
    torch_sparse
    torch_scatter

all =
    %(testing)s
    %(goggle)s

[tool:pytest]
addopts =
    --cov synthcity --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
markers =
    slow: mark tests as slow (deselect with '-m "not slow"')
    slow_1: mark tests as slow (deselect with '-m "not slow_1"')
    slow_2: mark tests as slow (deselect with '-m "not slow_1"')

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1.1
package = synthcity
extensions =
    pre_commit
